# concord

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: bump-release-version.sh  check-release-version.sh
.github/workflows/: ci.yml  cla.yml  prepare-release.yml  release.yml
signatures/: cla.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/chat/: ChatHeader.tsx  ChatView.tsx  EmojiPicker.tsx  MessageContent.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx  PinnedMessages.tsx  ReactionBar.tsx  SearchPanel.tsx  ThreadPanel.tsx  TypingIndicator.tsx
src/components/common/: Avatar.tsx  Emoji.tsx  ErrorBoundary.tsx  ImageLightbox.tsx  LoadingSpinner.tsx  Modal.tsx  QuickSwitcher.tsx  ThemedSelect.tsx  UserPopover.tsx
src/lib/: emojiData.ts  livekit.ts  matrix.ts  matrixEventHandlers.ts  notifications.ts  verification.ts
src/pages/: LoginPage.tsx  MainPage.tsx
src/stores/: authStore.test.ts  authStore.ts  callStore.ts  categoryStore.ts  channelOrderStore.test.ts  channelOrderStore.ts  channelPrefsStore.ts  customEmojiStore.ts  memberStore.ts  messageStore.test.ts  messageStore.ts  presenceStore.ts  roomStore.test.ts  roomStore.ts  settingsStore.ts  typingStore.ts  uiStore.test.ts  uiStore.ts  verificationStore.test.ts  verificationStore.ts
src/utils/: decryptAttachment.ts  formatters.test.ts  formatters.ts  matrixHelpers.test.ts  matrixHelpers.ts  roles.test.ts  roles.ts  useMatrixImage.ts
(+42 files in other folders)
