[package]
name = "concord"
version = "0.1.0"
description = "A Discord-like Matrix client"
authors = ["you"]
edition = "2021"

[lib]
name = "concord_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
